--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@ which directories you ...</p>
 									Wed 26 May 2010
 							</abbr>
 
-							<p> In <a href="./category/Code.html">Code</a></p>
+							<p> In <a href="./category/Life.html">Life</a></p>
 							
 </p>
 						<p></p>
