--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@ headers = ('first_name', 'last_name', 'gpa ...</pre>
 									Tue 03 August 2010
 							</abbr>
 
-							<p> In <a href="./category/Life.html">Life</a></p>
+							<p> In <a href="./category/Code.html">Code</a></p>
 							
 </p>
 						<p></p>
